<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/splash_screen_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <LinearLayout
        android:id="@+id/connect_info"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/website_intro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/No_internet"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:textSize="22sp"
            android:text="@string/No_internet_info"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/No_internet_info_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/No_internet_info_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/No_internet_info_3"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/splash_screen"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/web_api"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/splash_card"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="200dp"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:layout_marginTop="180dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:elevation="10dp"-->
<!--            app:cardCornerRadius="40dp">-->

<!--            <ImageView-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="200dp"-->
<!--                android:contentDescription="TODO"-->
<!--                android:src="@drawable/website"-->
<!--                tools:ignore="ContentDescription,HardcodedText" />-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <TextView-->
<!--            android:id="@+id/splash_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="395dp"-->
<!--            android:text="@string/splash_name"-->
<!--            android:textColor="@color/Smoky_black"-->
<!--            android:textSize="45sp" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="490dp"/>

    </RelativeLayout>

</RelativeLayout>